tests/baselines/reference/functionCall13.errors.txt
==== tests/cases/compiler/functionCall13.ts (4 errors) ====
    function foo(a:string, ...b:number[]){}
    foo('foo', 1); 
    foo('foo'); 
    foo();
    ~~~
!!! functionCall13.ts(4,1): error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! functionCall13.ts(4,1): error TS2087: Could not select overload for 'call' expression.
    foo(1, 'bar');
    ~~~
!!! functionCall13.ts(5,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! functionCall13.ts(5,1): error TS2087: Could not select overload for 'call' expression.
    foo('foo', 1, 3);
    